// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HamburgerButton /> renders a hamburger button 1`] = `
.c0 {
  position: absolute;
  inset-block-start: 1em;
  inset-inline-start: 1em;
  inline-size: 1px;
  block-size: 1px;
  clip: rect(1px, 1px, 1px, 1px);
  overflow: hidden;
}

<input
  class="c0"
  id="toggle"
  type="checkbox"
/>
`;

exports[`<HamburgerButton /> toggles the hamburger button on change 1`] = `
.c0 {
  position: absolute;
  inset-block-end: 1em;
  inset-inline-end: 1em;
  inline-size: 1px;
  block-size: 1px;
  clip: rect(1px, 1px, 1px, 1px);
  overflow: hidden;
}

<input
  class="c0"
  id="toggle"
  type="checkbox"
/>
`;

exports[`<HamburgerButton /> toggles the hamburger button on change 2`] = `
.c0 {
  position: absolute;
  inset-block-end: 1em;
  inset-inline-end: 1em;
  inline-size: 1px;
  block-size: 1px;
  clip: rect(1px, 1px, 1px, 1px);
  overflow: hidden;
}

<input
  class="c0"
  id="toggle"
  type="checkbox"
/>
`;
